# AI-Agents-course

./: .gitignore  PUSH_HW2.bat  README.md
HW3Version1/: .env-example  .gitignore  README.md  promptsUsed.md  pyproject.toml  skills.md  tools.md
HW3Version1/assets/graphs/: generate_graph.py
HW3Version1/config/: rate_limits.json  setup.json
HW3Version1/data/: guideline.md  guideline.md.example  research.md
HW3Version1/docs/: PLAN.md  PLAN_grade_fixes.md  PLAN_python_charts.md  PLAN_tikz_collision.md  PRD.md  PRD_evaluator_optimizer.md  PRD_grade_fixes.md  PRD_latex_pipeline.md  PRD_mcp_tools.md  PRD_python_charts.md  PRD_researcher_agent.md  PRD_tikz_collision.md  PRD_writer_agent.md  TODO.md  TODO_grade_fixes.md  TODO_python_charts.md  TODO_tikz_collision.md  arrow_citation_prd.md  bidi_citation_fix_prd.md  bidi_main_language_prd.md  content_quality_prd.md  coverpage_table_fix_prd.md  graphics_table_fix_prd.md  hebrew_bidi_fix_prd.md
HW3Version1/eval_dataset/: checkpoint.jsonl  judge_results.json  quality_guideline.md
HW3Version1/notebooks/: results_analysis.ipynb
HW3Version1/profiles/: Characters.md  Structure.md  Terminology.md
HW3Version1/result for trial4/: draft_final.tex
HW3Version1/result for trial5/: draft_final.tex
HW3Version1/result for trial6/: draft_final.tex  references.bib
HW3Version1/results/: draft_final.tex  draft_v1.tex  metrics.jsonl  references.bib  run_log.txt  traces.jsonl
HW3Version1/scripts/: analyze_metrics.py  analyze_traces.py  check_file_sizes.py  run_eval_pipeline.py
HW3Version1/skills/catch-me-up/: SKILL.md
HW3Version1/skills/research/: SKILL.md
HW3Version1/skills/writing/: SKILL.md
HW3Version1/src/: main.py
HW3Version1/src/article_writer/: __init__.py  crew.py
HW3Version1/tests/: conftest.py
HW3Version1/tests/integration/: test_context_pipeline.py  test_review_loop.py
HW3Version1/tests/unit/: test_article_extractor.py  test_f1_metrics.py  test_few_shot_loader.py  test_judge.py  test_metrics_tracker.py  test_reviewer.py  test_tracer.py
homeWork2Modified/: .env-example  .gitignore  README.md  progressInassignment.md  pyproject.toml
homeWork2Modified/config/: logging_config.json  rate_limits.json  setup.json
homeWork2Modified/docs/: costs.md  fpd.md  guide.md  rules.md
homeWork2Modified/memory/: MEMORY.md
homeWork2Modified/results/: results.md  session.jsonl
homeWork2Modified/src/my_package/: main.py
hw1/: .coverage  .env-example  .gitignore  README.md  pyproject.toml  run_all.py  run_experiments.py  run_figures.py  run_rnn_epochs.py  run_test.py
hw1/config/: setup.json
hw1/docs/: PLAN.md  PRD.md  PROMPT_LOG.md  TODO.md
hw1/outputs/models/: high_FC.pt  high_LSTM.pt  high_RNN.pt  low_FC.pt  low_LSTM.pt  low_RNN.pt
hw1/outputs/results/: results.json
hw1/src/hw1/: __init__.py
hw1/src/services/: base_visualizer.py  data_generator.py  experiment_runner.py  figure_plotter.py  reconstruction_plotter.py  research_visualizer.py  stress_test.py  train.py
hw1/tests/unit/: test_experiment_runner.py  test_models.py  test_signals.py  test_trainer.py  test_visualizer.py
hw2/: .env-example  .gitignore  README.md  SYSTEM_OVERVIEW.md  firstArgument.md  main.py  pyproject.toml
hw2/.claude/commands/: con_skill.md  father_skill.md  pro_skill.md  start_debate.md
hw2/assets/stage1/: desktop.ini
hw2/config/: setup.json
hw2/debate_agents/: .env-example  .env.example  .gitignore  README.md  pyproject.toml
hw2/debate_agents/assets/: README.md
hw2/docs/: PLAN.md  PRD.md  PRD_debate_agents.md  PRD_father_agent.md  PRD_gatekeeper.md  PRD_logger_watchdog.md  TODO.md
hw2/logs/: agent_checkpoint.md  debate_summary.md  session_history.jsonl
hw2/personas/: judge.md  opponent.md  proponent.md
hw2/stage1/: HOW_TO_RUN.md  con_prompt.md  debate_transcript.md  observations.md  pro_prompt.md
hw2/stage2/: HOW_TO_RUN.md
hw2/tests/: simulate_debate.py
(+201 files in other folders)
