[project]
name = "hw1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "yamandahle", email = "yamandahle@gmail.com" }
]
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["uv_build>=0.11.9,<0.12.0"]
build-backend = "uv_build"
