[project]
name = "hw1"
version = "0.1.0"
description = "RNN/LSTM Sine Wave Reconstruction — AI Agents Course HW1"
readme = "README.md"
authors = [
    { name = "yamandahle", email = "yamandahle@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "torch>=2.2.0",
    "numpy>=1.26.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.2",
    "scipy>=1.12.0",
    "pandas>=2.1.0",
]

[build-system]
requires = ["uv_build>=0.11.9,<0.12.0"]
build-backend = "uv_build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
]
