[project]
name = "hw2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.104.1",
    "duckduckgo-search>=8.1.1",
    "google-generativeai>=0.8.6",
    "pytest>=9.0.3",
    "python-dotenv>=1.2.2",
    "questionary>=2.1.1",
    "ruff>=0.15.14",
]
